[gd_scene load_steps=8 format=3 uid="uid://dun1cpardk2xw"]

[ext_resource type="Script" uid="uid://d2hsx0vjc6tce" path="res://game.gd" id="1_qclsr"]
[ext_resource type="PackedScene" uid="uid://dsw8raqgacxsc" path="res://player.tscn" id="2_a7q7f"]
[ext_resource type="PackedScene" uid="uid://c2qg1nuvfnd4q" path="res://trees/pine_tree.tscn" id="3_6h7ij"]
[ext_resource type="Script" uid="uid://ccb6lc54tgsjv" path="res://counter.gd" id="4_qqaft"]
[ext_resource type="Script" uid="uid://qc3dg7rw5oit" path="res://end_game.gd" id="5_7jj1j"]
[ext_resource type="AudioStream" uid="uid://bxklbv48n5vq4" path="res://lofi-background-music-388291.mp3" id="6_edxvn"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qclsr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Player" parent="." instance=ExtResource("2_a7q7f")]
platform_floor_layers = 4294967040

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="Counter" type="Node2D" parent="Player/Path2D"]
script = ExtResource("4_qqaft")

[node name="Timer" type="Timer" parent="Player/Path2D/Counter"]
autostart = true

[node name="Label" type="Label" parent="Player/Path2D/Counter"]
offset_left = -82.0
offset_top = -512.0
offset_right = 82.0
offset_bottom = -354.0
theme_override_font_sizes/font_size = 116
text = "0.0"

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133412, 0.133412, 0.133412, 0.439216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -32

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.565765, 1, 0.641032, 1)

[node name="PineTree" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(66, 591)

[node name="PineTree2" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(155, 643)

[node name="PineTree3" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(-298, 278)

[node name="PineTree4" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(682, 254)

[node name="PineTree5" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(829, 384)

[node name="PineTree11" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(781, -296)

[node name="PineTree6" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(-404, 288)

[node name="PineTree7" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(-788, 370)

[node name="PineTree8" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(-829, 229)

[node name="PineTree9" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(422, -148)

[node name="PineTree10" parent="." instance=ExtResource("3_6h7ij")]
position = Vector2(-573, -231)

[node name="EndGame" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_7jj1j")

[node name="CanvasLayer" type="CanvasLayer" parent="EndGame"]

[node name="SlimeCounterLabel" type="Label" parent="EndGame/CanvasLayer"]
unique_name_in_owner = true
offset_left = 25.0
offset_top = 20.0
offset_right = 787.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 86
text = "Kills: 0/50"

[node name="YouWin" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="YouWin"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 0.780392)

[node name="Label" type="Label" parent="YouWin/ColorRect"]
top_level = true
layout_mode = 0
offset_left = 522.0
offset_top = 391.0
offset_right = 1436.0
offset_bottom = 686.0
theme_override_font_sizes/font_size = 216
text = "You Win!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_edxvn")
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
